# meta-ads-cli

./: LICENSE  README.md  pyproject.toml
meta/: __init__.py  __main__.py  cli.py  client.py  config.py  models.py
