[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meta-ads-cli"
version = "0.1.0"
description = "CLI for the Meta Marketing API (Facebook + Instagram ads) -- custom wrapper over Graph API v21"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.scripts]
meta = "meta.cli:main"
